# e-ks

./: .gitignore  Cargo.toml
.github/scripts/: comment-pdf-diff-summary.js
.github/workflows/: build-lint-test.yml  create-release.yml  rustdoc.yml  sonarqube.yml
deploy/: typst.Dockerfile
development/: Cargo.toml
playwright/: compose.yml
playwright/tests/: download-pdf.spec.ts  fixtures.ts  provide-general-information.spec.ts
playwright/tests/pages/: selectElectoralDistrictsPage.ts  submitPage.ts
