[package]
name = "eks"
version = "0.5.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.91"
publish = false
readme = "README.md"
description = "Elektronisch kandidaatstellingssysteem"
documentation = "https://kiesraad.github.io/e-KS/e_ks/"
repository = "https://github.com/kiesraad/e-KS"

[features]
# Default development-oriented feature set.
default = ["database", "migrations", "fixtures", "livereload", "dev-features", "http-logging", "db-tests", "net-tests"]
# Development-only defaults (relaxes some config requirements + proxy to bag service).
dev-features = []
# Enable database-backed storage via Postgres / SQLx.
database = ["dep:sqlx"]
# Run database migrations on startup.
migrations = ["database"]
# Load fixture data on startup (dev/test).
fixtures = []
# Enable database-dependent tests.
db-tests = ["database"]
# Enable network-dependent tests.
net-tests = []
# Enable HTTP request/response tracing via tower-http.
http-logging = ["tower-http/trace"]
# Live-reload assets/templates during development.
livereload = []
# Serve embedded static assets from memory.
memory-serve = ["dep:memory-serve"]
# Run the embedded Typst webservice in-process.
embed-typst = ["dep:typst-webservice"]

[dependencies]
# tokio universe
axum = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra = { version = "0.12.1", features = ["routing", "typed-routing", "form", "cookie", "typed-header"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tower-http = { version = "0.6.8", features = ["set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
bytes = "1.11.1"

# rust-lang
futures-core = "0.3.32"

# blessed.rs / dtolnay
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"

# blessed.rs
chrono = { version = "0.4.43", features = ["alloc", "std", "serde"] }
parking_lot = "0.12.5"
rand = "0.10.0"
sqlx = { version = "0.8.6", optional = true, features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-none"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v5"] }
url = "2.5.7"
# for now, we don't need TLS in reqwest as we only use it for cluster internal traffic with Typst
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream"] }

# well maintained + many downloads
askama = "0.15.4" # 31M downloads (Dirkjan Ochtman)
csv = "1.4.0" # 136M downloads (Andrew Gallant)
phf = { version = "0.13.1", default-features = false } # 247M downloads (Steven Fackler)
secrecy = "0.10.3" # 89M downloads (Tony Arcieri)

# tweedegolf
memory-serve = { version = "2.0.0", optional = true }
typst-webservice = { git = "https://github.com/tweedegolf/typst-webservice.git", tag = "0.5.3", optional = true }
validate = { path = "validate" }

[build-dependencies]
memory-serve = { version = "2.0.0", optional = true }
phf_codegen = "0.13.1"

[dev-dependencies]
regex = "1.12.2"
http-body-util = "0.1"
tower = "0.5"
tracing-test = "0.2.6"

[lints.rust]
unsafe_code = "forbid"

# https://askama.readthedocs.io/en/stable/performance.html#slow-debug-recompilations
[profile.dev.package.askama_derive]
opt-level = 3
